@@ -1,14 +1,22 @@
 language: c
-install: wget https://raw.githubusercontent.com/ocaml/ocaml-travisci-skeleton/master/.travis-opam.sh
-script: bash -ex .travis-opam.sh
-sudo: required
+sudo: false
+services:
+  - docker
+install: wget https://raw.githubusercontent.com/ocaml/ocaml-travisci-skeleton/master/.travis-docker.sh
+script: bash ./.travis-docker.sh
 env:
-  - OCAML_VERSION=4.02
-  - OCAML_VERSION=4.01 PACKAGE="mirage-conduit"
-  - OCAML_VERSION=4.01 POST_INSTALL_HOOKS="make -C tests"
-  - OCAML_VERSION=4.02 DEPOPTS=lwt
-  - OCAML_VERSION=4.02 DEPOPTS=async
-  - OCAML_VERSION=4.02 DEPOPTS=async_ssl
-  - OCAML_VERSION=4.02 DEPOPTS=ssl
-  - OCAML_VERSION=4.02 DEPOPTS="dns tcpip mirage-types vchan tls"
-  - OCAML_VERSION=4.02 PACKAGE="conduit" POST_INSTALL_HOOK="opam install cohttp cowabloga"
+ global:
+   - PACKAGE="conduit"
+   - POST_INSTALL_HOOKS="make -C tests"
+   - DEPOPTS="lwt async async_ssl ssl"
+ matrix:
+   - DISTRO=debian-stable OCAML_VERSION=4.02.3
+   - DISTRO=debian-testing OCAML_VERSION=4.02.3
+   - DISTRO=debian-unstable OCAML_VERSION=4.02.3
+   - DISTRO=ubuntu-12.04 OCAML_VERSION=4.01.0
+   - DISTRO=ubuntu-15.10 OCAML_VERSION=4.02.3
+   - DISTRO=ubuntu-16.04 OCAML_VERSION=4.02.3
+   - DISTRO=centos-6 OCAML_VERSION=4.01.0
+   - DISTRO=centos-7 OCAML_VERSION=4.02.3
+   - DISTRO=fedora-23 OCAML_VERSION=4.02.3
+   - DISTRO=alpine-3.3 OCAML_VERSION=4.02.3
